// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Messaging/AdaptiveCard Action Set 1`] = `
Array [
  <div
    className="wxc-adaptive-card wxc-ac wxc-ac-container--vertical wxc-ac-container--has-padding"
    style={Object {}}
  >
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-wrap--true"
    >
      Cards can have action sets in the middle of their body.
    </div>
    <div
      className="wxc-adaptive-cards-action-set wxc-ac wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div>
        <h5>
          Action.ShowCard Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "Action.ShowCard",
    "title": "ShowCard",
    "card": {
        "type": "AdaptiveCard",
        "body": [
            {
                "type": "TextBlock",
                "text": "This is a show card"
            }
        ]
    }
}
        </pre>
      </div>
      <div>
        <h5>
          Action.OpenUrl Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "Action.OpenUrl",
    "title": "OpenUrl",
    "url": "https://adaptivecards.io"
}
        </pre>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-wrap--true"
    >
      There are also still actions's at the bottom of the card
    </div>
    <div
      className="wxc-adaptive-cards-action-set wxc-ac wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div>
        <h5>
          Action.ShowCard Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "Action.ShowCard",
    "title": "ShowCard",
    "card": {
        "type": "AdaptiveCard",
        "body": [
            {
                "type": "TextBlock",
                "text": "This is a show card"
            }
        ]
    }
}
        </pre>
      </div>
      <div>
        <h5>
          Action.OpenUrl Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "Action.OpenUrl",
    "title": "OpenUrl",
    "url": "https://adaptivecards.io"
}
        </pre>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Card 1`] = `
Array [
  <div
    className="wxc-adaptive-card wxc-ac wxc-ac-container--vertical wxc-ac-container--has-padding"
    style={Object {}}
  >
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <img
          className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--Medium wxc-ac-image-style--Person"
          src="https://developer.webex.com/images/webex-teams-logo.png"
          style={
            Object {
              "backgroundColor": undefined,
              "height": "50px",
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-weight--Lighter wxc-ac-color--Accent"
        >
          Cisco Webex Teams
        </div>
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--Left wxc-ac-weight--Bolder wxc-ac-wrap--true wxc-ac-color--Light wxc-ac-size--Large wxc-ac-spacing--Small"
        >
          Buttons and Cards Release
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--Center wxc-ac-spacing--Padding wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--Light"
        >
          Release Date:
        </div>
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-weight--Lighter wxc-ac-color--Light wxc-ac-spacing--Small"
        >
          Product:
        </div>
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-weight--Lighter wxc-ac-color--Light wxc-ac-spacing--Small"
        >
          OS:
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--Light"
        >
          Aug 6, 2019
        </div>
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--Light wxc-ac-weight--Lighter wxc-ac-spacing--Small"
        >
          Webex Teams
        </div>
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-weight--Lighter wxc-ac-color--Light wxc-ac-spacing--Small"
        >
          Mac, Windows, Web
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-wrap--true"
    >
      We're making it easier for you to interact with bots and integrations in Webex Teams. When your bot sends information in a space that includes a card with buttons, you can now easily interact with it.
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
    >
      Buttons and Cards Resources:
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-spacing--Small wxc-ac-container--vertical"
        style={Object {}}
      >
        <img
          alt=""
          className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--Small"
          src="https://developer.webex.com/images/link-icon.png"
          style={
            Object {
              "backgroundColor": undefined,
              "width": "30px",
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--Center wxc-ac-spacing--Small wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--Left wxc-ac-size--Medium"
        >
          [Developer Portal Buttons and Cards Guide]()
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-action-set wxc-ac wxc-ac-spacing--None wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div>
        <h5>
          Action.Submit Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "Action.Submit",
    "title": "Subscribe to Release Notes",
    "data": {
        "subscribe": true
    }
}
        </pre>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Column 1`] = `
Array [
  <div
    className="wxc-adaptive-card wxc-ac wxc-ac-container--vertical wxc-ac-container--has-padding"
    style={Object {}}
  >
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 1
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--medium"
          src="https://adaptivecards.io/content/cats/1.png"
          style={
            Object {
              "backgroundColor": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 2
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--medium"
          src="https://adaptivecards.io/content/cats/1.png"
          style={
            Object {
              "backgroundColor": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 3
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--medium"
          src="https://adaptivecards.io/content/cats/1.png"
          style={
            Object {
              "backgroundColor": undefined,
              "width": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={
          Object {
            "minHeight": "50px",
          }
        }
      />
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={
          Object {
            "minHeight": "50px",
          }
        }
      />
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={
          Object {
            "minHeight": "50px",
          }
        }
      />
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
    >
      You can even repeat the background image...
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={
          Object {
            "minHeight": "50px",
          }
        }
      />
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--Center wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--Center wxc-ac-wrap--true"
        >
          Those are some neat arrows
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
    >
      Horizontal repeat...
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={
          Object {
            "minHeight": "50px",
          }
        }
      />
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={
          Object {
            "minHeight": "50px",
          }
        }
      />
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={
          Object {
            "minHeight": "50px",
          }
        }
      />
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
    >
      Vertical repeat...
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={
          Object {
            "minHeight": "50px",
          }
        }
      />
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={
          Object {
            "minHeight": "50px",
          }
        }
      />
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={
          Object {
            "minHeight": "50px",
          }
        }
      />
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
    >
      Bleed left
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container-style--emphasis wxc-ac-container--has-padding wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--good wxc-ac-container--has-padding wxc-ac-bleed--true wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 1
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--attention wxc-ac-container--has-padding wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 2
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--warning wxc-ac-container--has-padding wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 3
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
    >
      Bleed center
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container-style--emphasis wxc-ac-container--has-padding wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--good wxc-ac-container--has-padding wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 1
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--attention wxc-ac-container--has-padding wxc-ac-bleed--true wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 2
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--warning wxc-ac-container--has-padding wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 3
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
    >
      Bleed right
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container-style--emphasis wxc-ac-container--has-padding wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--good wxc-ac-container--has-padding wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 1
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--attention wxc-ac-container--has-padding wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 2
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--warning wxc-ac-container--has-padding wxc-ac-bleed--true wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 3
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
    >
      Bleed all
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container-style--emphasis wxc-ac-container--has-padding wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--good wxc-ac-container--has-padding wxc-ac-bleed--true wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 1
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--attention wxc-ac-container--has-padding wxc-ac-bleed--true wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 2
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--warning wxc-ac-container--has-padding wxc-ac-bleed--true wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 3
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div>
          <h5>
            Graph Component
          </h5>
          <pre
            className="wxc-adaptive-cards-unknown-component"
          >
            {
    "type": "Graph"
}
          </pre>
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div>
          <h5>
            Graph Component
          </h5>
          <pre
            className="wxc-adaptive-cards-unknown-component"
          >
            {
    "type": "Graph"
}
          </pre>
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-wrap--true"
        >
          This is a column
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container-style--emphasis wxc-ac-container--has-padding wxc-ac-container--horizontal"
      style={
        Object {
          "minHeight": "100px",
        }
      }
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--default wxc-ac-container--vertical"
        style={
          Object {
            "minHeight": "200px",
          }
        }
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-wrap--true"
        >
          The columnset has a minHeight of 100px while this column has a minHeight of 200px so it should override
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--default wxc-ac-container--vertical"
        style={
          Object {
            "minHeight": "50px",
          }
        }
      >
        <div
          className="wxc-adaptive-cards-fact-set wxc-ac "
        >
          <table>
            <tbody>
              <tr>
                <th
                  className="wxc-adaptive-cards-fact-set__fact-title"
                >
                  ColumnSet
                </th>
                <td>
                  MinHeight: 100px
                </td>
              </tr>
              <tr>
                <th
                  className="wxc-adaptive-cards-fact-set__fact-title"
                >
                  Column 1
                </th>
                <td>
                  MinHeight: 200px
                </td>
              </tr>
              <tr>
                <th
                  className="wxc-adaptive-cards-fact-set__fact-title"
                >
                  Column 2
                </th>
                <td>
                  MinHeight: 50px
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-wrap--true wxc-ac-size--Medium"
    >
      The middle column is set to rtl
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-spacing--Medium wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-wrap--true"
        >
          Column One
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-rtl--true wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-wrap--true"
        >
          العمود الثاني
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-wrap--true"
        >
          Column three
        </div>
      </div>
    </div>
    <div
      className="wxc-container wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container--horizontal"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
          style={Object {}}
        >
          <img
            className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--medium"
            src="https://adaptivecards.io/content/cats/3.png"
            style={
              Object {
                "backgroundColor": undefined,
                "width": undefined,
              }
            }
          />
          <div
            className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--center wxc-ac-weight--bolder"
          >
            SHADES
          </div>
        </div>
        <div
          className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-separator--true wxc-ac-spacing--medium wxc-ac-container--vertical"
          style={Object {}}
        >
          <div
            className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--center"
          >
            Dec 4
          </div>
          <div
            className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--center wxc-ac-spacing--none"
          >
            Final
          </div>
          <div
            className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--center wxc-ac-size--extraLarge"
          >
            7 - 40
          </div>
        </div>
        <div
          className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-separator--true wxc-ac-spacing--medium wxc-ac-container--vertical"
          style={Object {}}
        >
          <img
            className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--center wxc-ac-image-size--medium"
            src="https://adaptivecards.io/content/cats/2.png"
            style={
              Object {
                "backgroundColor": undefined,
                "width": undefined,
              }
            }
          />
          <div
            className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--center wxc-ac-weight--bolder"
          >
            SKINS
          </div>
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-weight--bolder"
    >
      Try clicking a column!
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 1
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--medium"
          src="https://adaptivecards.io/content/cats/1.png"
          style={
            Object {
              "backgroundColor": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 2
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--medium"
          src="https://adaptivecards.io/content/cats/1.png"
          style={
            Object {
              "backgroundColor": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 3
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--medium"
          src="https://adaptivecards.io/content/cats/1.png"
          style={
            Object {
              "backgroundColor": undefined,
              "width": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          No Style
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--default wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Default Style
        </div>
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--emphasis wxc-ac-container--has-padding wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Emphasis Style
        </div>
        <div
          className="wxc-container wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
          style={Object {}}
        >
          <div
            className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
          >
            Container no style
          </div>
        </div>
        <div
          className="wxc-container wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--default wxc-ac-container--vertical"
          style={Object {}}
        >
          <div
            className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
          >
            Container default style
          </div>
        </div>
        <div
          className="wxc-container wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--emphasis wxc-ac-container--has-padding wxc-ac-container--vertical"
          style={Object {}}
        >
          <div
            className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
          >
            Container emphasis style
          </div>
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
    >
      Hi,
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-is-subtle--true"
    >
      MasterHip
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-height--stretch wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--bottom wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Column 1
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          (auto)
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--medium"
          src="https://adaptivecards.io/content/adaptive-card-50.png"
          style={
            Object {
              "backgroundColor": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--center"
        >
          (stretch)
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--center wxc-ac-image-size--medium"
          src="https://adaptivecards.io/content/adaptive-card-50.png"
          style={
            Object {
              "backgroundColor": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          (auto)
        </div>
        <img
          className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--medium"
          src="https://adaptivecards.io/content/adaptive-card-50.png"
          style={
            Object {
              "backgroundColor": undefined,
              "width": undefined,
            }
          }
        />
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Column Set 1`] = `
Array [
  <div
    className="wxc-adaptive-card wxc-ac wxc-ac-container--vertical wxc-ac-container--has-padding"
    style={Object {}}
  >
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-weight--bolder"
    >
      Pick up where you left off?
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-spacing--medium wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <img
          className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--medium"
          src="https://unsplash.it/80?image=1083"
          style={
            Object {
              "backgroundColor": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Silver Star Mountain
        </div>
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-is-subtle--true wxc-ac-spacing--none"
        >
          Maps
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <img
          className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--medium"
          src="https://unsplash.it/80?image=1082"
          style={
            Object {
              "backgroundColor": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--emphasis wxc-ac-container--has-padding wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          Kitchen Remodel
        </div>
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-is-subtle--true wxc-ac-spacing--none"
        >
          With EMPHASIS
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-column-set wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-bleed--false wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <img
          className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--medium"
          src="https://unsplash.it/80?image=1080"
          style={
            Object {
              "backgroundColor": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="wxc-adaptive-cards-column wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
        >
          The Witcher
        </div>
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-is-subtle--true wxc-ac-spacing--none"
        >
          Netflix
        </div>
      </div>
    </div>
    <div
      className="wxc-adaptive-cards-action-set wxc-ac wxc-ac-container--horizontal"
      style={Object {}}
    >
      <div>
        <h5>
          Action.OpenUrl Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "Action.OpenUrl",
    "title": "Resume all",
    "url": "ms-cortana:resume-all"
}
        </pre>
      </div>
      <div>
        <h5>
          Action.OpenUrl Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "Action.OpenUrl",
    "title": "More activities",
    "url": "ms-cortana:more-activities"
}
        </pre>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Container 1`] = `
Array [
  <div
    className="wxc-adaptive-card wxc-ac wxc-ac-container--vertical wxc-ac-container--has-padding"
    style={Object {}}
  >
    <div
      className="wxc-container wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
      style={
        Object {
          "minHeight": "15rem",
        }
      }
    >
      <div
        className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
      >
        This is some text
      </div>
      <img
        className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--large"
        src="https://adaptivecards.io/content/cats/1.png"
        style={
          Object {
            "backgroundColor": undefined,
            "width": undefined,
          }
        }
      />
    </div>
    <div
      className="wxc-container wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--default wxc-ac-container--vertical"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
      >
        This container has the default style
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--default"
      >
        color: default
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--accent"
      >
        color: accent
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--good"
      >
        color: good
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--warning"
      >
        color: warning
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--attention"
      >
        color: attention
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--light"
      >
        color: light
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--dark"
      >
        color: dark
      </div>
    </div>
    <div
      className="wxc-container wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--accent wxc-ac-container--has-padding wxc-ac-container--vertical"
      style={Object {}}
    >
      <div
        className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
      >
        This container has the accent style
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--default"
      >
        color: default
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--accent"
      >
        color: accent
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--good"
      >
        color: good
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--warning"
      >
        color: warning
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--attention"
      >
        color: attention
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--light"
      >
        color: light
      </div>
      <div
        className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--dark"
      >
        color: dark
      </div>
      <div
        className="wxc-container wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--dark"
        >
          Contained container - no style
        </div>
      </div>
      <div
        className="wxc-container wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--emphasis wxc-ac-container--has-padding wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--dark"
        >
          Contained container - emphasis
        </div>
      </div>
      <div
        className="wxc-container wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--default wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--dark"
        >
          Contained container - default
        </div>
      </div>
      <div
        className="wxc-container wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--good wxc-ac-container--has-padding wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--dark"
        >
          Contained container - good
        </div>
      </div>
      <div
        className="wxc-container wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--warning wxc-ac-container--has-padding wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--dark"
        >
          Contained container - warning
        </div>
      </div>
      <div
        className="wxc-container wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--attention wxc-ac-container--has-padding wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--dark"
        >
          Contained container - attention
        </div>
      </div>
      <div
        className="wxc-container wxc-ac wxc-ac-vertical-content-alignment--top wxc-ac-container-style--accent wxc-ac-container--has-padding wxc-ac-container--vertical"
        style={Object {}}
      >
        <div
          className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--dark"
        >
          Contained container - accent
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Fact Set 1`] = `
Array [
  <div
    className="wxc-adaptive-card wxc-ac wxc-ac-container--vertical wxc-ac-container--has-padding"
    style={Object {}}
  >
    <div
      className="wxc-adaptive-cards-fact-set wxc-ac "
    >
      <table>
        <tbody>
          <tr>
            <th
              className="wxc-adaptive-cards-fact-set__fact-title"
            >
              Fact 1
            </th>
            <td>
              Value 1
            </td>
          </tr>
          <tr>
            <th
              className="wxc-adaptive-cards-fact-set__fact-title"
            >
              Fact 2
            </th>
            <td>
              Value 2
            </td>
          </tr>
          <tr>
            <th
              className="wxc-adaptive-cards-fact-set__fact-title"
            >
              Fact 3
            </th>
            <td>
              Value 3
            </td>
          </tr>
          <tr>
            <th
              className="wxc-adaptive-cards-fact-set__fact-title"
            >
              Fact 4
            </th>
            <td>
              Value 5
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Image 1`] = `
Array [
  <div
    className="wxc-adaptive-card wxc-ac wxc-ac-container--vertical wxc-ac-container--has-padding"
    style={Object {}}
  >
    <img
      className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--medium wxc-ac-image-style--person"
      src="https://adaptivecards.io/content/cats/1.png"
      style={
        Object {
          "backgroundColor": "blue",
          "width": undefined,
        }
      }
    />
    <img
      className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--small"
      src="https://adaptivecards.io/content/cats/1.png"
      style={
        Object {
          "backgroundColor": undefined,
          "height": "60px",
          "width": "60px",
        }
      }
    />
    <img
      className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--large"
      src="https://adaptivecards.io/content/cats/2.png"
      style={
        Object {
          "backgroundColor": "#cdcdcd",
          "width": undefined,
        }
      }
    />
    <img
      className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--medium"
      src="https://adaptivecards.io/content/cats/3.png"
      style={
        Object {
          "backgroundColor": undefined,
          "width": undefined,
        }
      }
    />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Image Set 1`] = `
Array [
  <div
    className="wxc-adaptive-card wxc-ac wxc-ac-container--vertical wxc-ac-container--has-padding"
    style={Object {}}
  >
    <div
      className="wxc-adaptive-cards-image-set wxc-ac wxc-ac-container--horizontal"
    >
      <img
        className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--large wxc-ac-image-style--person"
        src="https://adaptivecards.io/content/cats/1.png"
        style={
          Object {
            "backgroundColor": "red",
            "width": undefined,
          }
        }
      />
      <img
        className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--medium"
        src="https://adaptivecards.io/content/cats/3.png"
        style={
          Object {
            "backgroundColor": undefined,
            "width": undefined,
          }
        }
      />
      <img
        className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--small"
        src="https://adaptivecards.io/content/cats/1.png"
        style={
          Object {
            "backgroundColor": undefined,
            "width": undefined,
          }
        }
      />
      <img
        className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--medium"
        src="https://adaptivecards.io/content/cats/1.png"
        style={
          Object {
            "backgroundColor": "#cdcdcd",
            "height": "60px",
            "width": "60px",
          }
        }
      />
      <img
        className="wxc-adaptive-cards-image wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-image-size--medium"
        src="https://adaptivecards.io/content/cats/2.png"
        style={
          Object {
            "backgroundColor": undefined,
            "width": undefined,
          }
        }
      />
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Rich Text Block 1`] = `
Array [
  <div
    className="wxc-adaptive-card wxc-ac wxc-ac-container--vertical wxc-ac-container--has-padding"
    style={Object {}}
  >
    <div
      className="wxc-adaptive-cards-rich-text-block wxc-ac wxc-ac-horizontal-alignment--left"
    >
      <span
        className="wxc-adaptive-cards-text-run wxc-ac "
        style={Object {}}
      >
        This is the first inline. 
      </span>
      <span
        className="wxc-adaptive-cards-text-run wxc-ac wxc-ac-color--good"
        style={Object {}}
      >
        We support colors,
      </span>
      <span
        className="wxc-adaptive-cards-text-run wxc-ac wxc-ac-is-subtle--true"
        style={Object {}}
      >
         both regular and subtle. 
      </span>
      <span
        className="wxc-adaptive-cards-text-run wxc-ac wxc-ac-size--small"
        style={Object {}}
      >
        Text 
      </span>
      <span
        className="wxc-adaptive-cards-text-run wxc-ac wxc-ac-size--medium"
        style={Object {}}
      >
        of 
      </span>
      <span
        className="wxc-adaptive-cards-text-run wxc-ac wxc-ac-size--large"
        style={Object {}}
      >
        all 
      </span>
      <span
        className="wxc-adaptive-cards-text-run wxc-ac wxc-ac-size--extraLarge"
        style={Object {}}
      >
        sizes! 
      </span>
      <span
        className="wxc-adaptive-cards-text-run wxc-ac wxc-ac-weight--lighter"
        style={Object {}}
      >
        Light weight text. 
      </span>
      <span
        className="wxc-adaptive-cards-text-run wxc-ac wxc-ac-weight--bolder"
        style={Object {}}
      >
        Bold weight text. 
      </span>
      <span
        className="wxc-adaptive-cards-text-run wxc-ac wxc-ac-highlight--true"
        style={Object {}}
      >
        Highlights. 
      </span>
      <span
        className="wxc-adaptive-cards-text-run wxc-ac wxc-ac-italic--true"
        style={Object {}}
      >
        Italics. 
      </span>
      <span
        className="wxc-adaptive-cards-text-run wxc-ac wxc-ac-strikethrough--true"
        style={Object {}}
      >
        Strikethrough. 
      </span>
      <span
        className="wxc-adaptive-cards-text-run wxc-ac wxc-ac-font-type--monospace"
        style={Object {}}
      >
        Monospace too!
      </span>
    </div>
    <div
      className="wxc-adaptive-cards-rich-text-block wxc-ac wxc-ac-horizontal-alignment--left"
    >
      <span
        className="wxc-adaptive-cards-text-run wxc-ac "
        style={Object {}}
      >
        Date-Time parsing: {{DATE(2017-02-14T06:08:39Z,LONG)}} {{TIME(2017-02-14T06:08:39Z)}}
      </span>
    </div>
    <div
      className="wxc-adaptive-cards-rich-text-block wxc-ac wxc-ac-horizontal-alignment--center"
    >
      <span
        className="wxc-adaptive-cards-text-run wxc-ac "
        style={Object {}}
      >
        Rich text blocks also support center alignment. Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor 
      </span>
    </div>
    <div
      className="wxc-adaptive-cards-rich-text-block wxc-ac wxc-ac-horizontal-alignment--right"
    >
      <span
        className="wxc-adaptive-cards-text-run wxc-ac "
        style={Object {}}
      >
        Rich text blocks also support right alignment. Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor 
      </span>
    </div>
    <div
      className="wxc-adaptive-cards-rich-text-block wxc-ac wxc-ac-horizontal-alignment--left"
    />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Text Block 1`] = `
Array [
  <div
    className="wxc-adaptive-card wxc-ac wxc-ac-container--vertical wxc-ac-container--has-padding"
    style={Object {}}
  >
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--default"
    >
      color: default
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--accent"
    >
      color: accent
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--good"
    >
      color: good
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--warning"
    >
      color: warning
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--attention"
    >
      color: attention
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--light"
    >
      color: light
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-color--dark"
    >
      color: dark
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
    >
      Font type not set.
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-font-type--default"
    >
      Font type set to *default*.
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-font-type--monospace"
    >
      Font type set to *monospace*.
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
    >
      **horizontalAlignment:left**
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--center"
    >
      **horizontalAlignment:center**
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--right"
    >
      **horizontalAlignment:right**
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-is-subtle--false"
    >
      isSubtle:false
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-is-subtle--true"
    >
      isSubtle:true
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-wrap--true"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-wrap--true"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left"
    >
      size:default
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-size--small"
    >
      size:small
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-size--default"
    >
      size:default
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-size--medium"
    >
      size:medium
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-size--large"
    >
      size:large
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-size--extraLarge"
    >
      size:extraLarge
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-weight--lighter"
    >
      weight: lighter
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-weight--default"
    >
      weight: default
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-weight--bolder"
    >
      weight: bolder
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-wrap--false"
    >
      **wrap: false** Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-wrap--true"
    >
      **wrap: true** Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container-style--heading wxc-ac-container--has-padding wxc-ac-wrap--true"
      role="heading"
    >
      Style set to heading
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container-style--heading wxc-ac-container--has-padding wxc-ac-color--good wxc-ac-wrap--true"
      role="heading"
    >
      Style set to heading, color set to good
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-container-style--default wxc-ac-wrap--true"
    >
      Style set to default
    </div>
    <div
      className="wxc-adaptive-cards-text-block wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-wrap--true"
    >
      Style unset
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
